--- a/BattleInfoPlugin/SampleData/FleetViewModelSampleData.xaml
+++ b/BattleInfoPlugin/SampleData/FleetViewModelSampleData.xaml
@@ -9,22 +9,22 @@
                            IsVisible="True">
 
     <viewModels:FleetViewModel.AirCombatResults>
-        <viewModels:AirCombatResultViewModel Name="1回目/空対空"/>
-        <viewModels:AirCombatResultViewModel Name="1回目/空対艦"
+        <viewModels:AirCombatResultViewModel Name="1st/Air-to-Air"/>
+        <viewModels:AirCombatResultViewModel Name="1st/Air-to-Ship"
                                 IsHappen="True"
                                 Count="400"
                                 LostCount="100"
                                 RemainingCount="300"/>
-        <viewModels:AirCombatResultViewModel Name="空対空"
+        <viewModels:AirCombatResultViewModel Name="Air-to-Air"
                                 IsHappen="True"
                                 Count="900"
                                 LostCount="200"
                                 RemainingCount="700"/>
-        <viewModels:AirCombatResultViewModel Name="空対艦"/>
+        <viewModels:AirCombatResultViewModel Name="Air-to-Ship"/>
     </viewModels:FleetViewModel.AirCombatResults>
 
     <viewModels:FleetViewModel.Fleet>
-        <models:FleetData Formation="戦闘陣形" FleetType="Enemy">
+        <models:FleetData Formation="Formation" FleetType="Enemy">
             <models:FleetData.Ships>
                 <models:MembersShipData MaxHP="15" NowHP="83" Name="戦艦水鬼" Situation="Tow" TypeName="つよい">
                     <models:MembersShipData.HP>
